24/05/2020 - Main: Fixed maximum number of cycles (for AC mode), which was set to 65535 (max int16) and which causes the switchboard to never stop cycling because the current cycle number overflows so it's never larger than 65535. Now set to 65000 to give it enough margin.
25/05/2020 - Keithley: Added reconnect function so the instrument automatically reconnects and software doesn't crash if connection is lost at any point
25/05/2020 - hvps: Fixed bug when reading cycle number that causes a crash if reading is invalid
25/05/2020 - Image Capture: fixed reconnection which didn't trigger if images are only grabbed but not retrieved. Now, reconnection triggers if any grab fails (but only when grabbing a set with 'grab_images', not for a single grab).
25/05/2020 - Main: set HVPS parameters on every cycle to make sure we get back on track if the HVPS resets
25/05/2020 - Main: Make sure relays get reconnected in auto mode after HVPS resets
26/05/2020 - Switchboard: Fixed the set voltage wait until reached method so it waits while the switchboard is testing for shorts
26/05/2020 - Main: Keep track of completed cycles properly and make sure all requested cycles (and not more) are completed even in case of a reset/disconnect
26/05/2020 - Main: Change the wait high before measurement phase so it still actvely monitors the DEAs in that time
27/05/2020 - Switchboard: Continuous reading now also records voltage set point, relay state, and switching mode (in addition to voltage and time)
27/05/2020 - Switchboard: Data from continuous reading can be saved to separate output file
28/05/2020 - Switchboard: Made all communications with hardware (write + read) atomic (using com port lock) to make sure we don't end up reading the wrong response when continuous reading thread is running
28/05/2020 - Main: Added short 1s pause at SwMode 0 when switching from AC to DC. This prevents the samples from getting exposed to the voltage spike that occurs due to the drop in current draw.